package tp2uml;

public class ReciboDeHaberes {

}
